--- a/languages/en.json
+++ b/languages/en.json
@@ -9,5 +9,8 @@
     "MCT.Config.RoundStart.Description": "Play custom round start sounds.",
 
     "MCT.Config.ForceNextUp.Title": "Force Turn Change Sound",
-    "MCT.Config.ForceNextUp.Description": "Foundry doesn't seem to actually play turn switch sounds. This forces it to do so."
+    "MCT.Config.ForceNextUp.Description": "Foundry doesn't seem to actually play turn switch sounds. This forces it to do so.",
+
+    "MCT.Config.Volume.Title": "Volume",
+    "MCT.Config.Volume.Description": "Volume for custom combat theme audio"
 }
